--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "framer-motion": "^6.5.1",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.0",
