--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@remix-run/node": "^1.7.0",
     "@remix-run/react": "^1.7.0",
     "@remix-run/serve": "^1.7.0",
+    "@types/react-scroll": "^1.8.4",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
@@ -28,7 +29,9 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-scroll": "^1.8.7",
+    "react-use-scroll-direction": "^0.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.0",
