--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
+    "@paypal/react-paypal-js": "^7.8.1",
     "@remix-run/express": "^1.7.0",
     "@remix-run/node": "^1.7.0",
     "@remix-run/react": "^1.7.0",
     "@remix-run/serve": "^1.7.0",
-    "@types/react-scroll": "^1.8.4",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
@@ -38,6 +38,7 @@
     "@remix-run/eslint-config": "^1.7.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-scroll": "^1.8.4",
     "autoprefixer": "^10.4.8",
     "concurrently": "^7.3.0",
     "eslint": "^8.20.0",
