--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@remix-run/node": "^1.7.0",
     "@remix-run/react": "^1.7.0",
     "@remix-run/serve": "^1.7.0",
+    "axios": "^0.27.2",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "framer-motion": "^6.5.1",
+    "js-cookie": "^3.0.1",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,6 +39,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.7.0",
     "@remix-run/eslint-config": "^1.7.0",
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-scroll": "^1.8.4",
