--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "framer-motion": "^6.5.1",
+    "gsap": "^3.11.1",
     "js-cookie": "^3.0.1",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
